[project]
name = "mental-health-support-calling-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.53.0",
    "unicorn>=2.1.4",
]
